k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webcolor
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webcolor
  template:
    metadata:
      labels:
        app: webcolor
    spec:
      containers:
      - name: webcolor
        image: kubedevio/web-color:blue
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webcolor
spec:
  selector:
    app: webcolor
  ports:
  - port: 80  
    targetPort: 80
  type: ClusterIP
